@@ -37,4 +37,11 @@ public interface HTableInterfaceFactory {
    * @return HTableInterface instance.
    */
   HTableInterface createHTableInterface(Configuration config, byte[] tableName);
+  
+  
+  /**
+   * Release the HTable resource represented by the table.
+   * @param table
+   */
+  void releaseHTableInterface(final HTableInterface table);
 }
