@@ -19,47 +19,73 @@
  */
 package org.apache.hadoop.hbase.client;
 
+import java.io.IOException;
+
+import junit.framework.Assert;
+
 import org.apache.hadoop.hbase.HBaseConfiguration;
-import org.apache.hadoop.hbase.HBaseTestCase;
+import org.apache.hadoop.hbase.HBaseTestingUtility;
+import org.apache.hadoop.hbase.HColumnDescriptor;
+import org.apache.hadoop.hbase.HTableDescriptor;
+import org.apache.hadoop.hbase.MasterNotRunningException;
 import org.apache.hadoop.hbase.util.Bytes;
+import org.junit.AfterClass;
+import org.junit.BeforeClass;
+import org.junit.Test;
 
 /**
  * Tests HTablePool.
  */
-public class TestHTablePool extends HBaseTestCase {
+public class TestHTablePool  {
 
+  private static HBaseTestingUtility TEST_UTIL   =  new HBaseTestingUtility();
+  
+  @BeforeClass
+  public static void beforeClass() throws Exception { 
+    TEST_UTIL.startMiniCluster(1);
+
+  }
+  
+  @AfterClass
+  public static void afterClass() throws IOException { 
+    TEST_UTIL.shutdownMiniCluster();
+  }
+  
+  @Test
   public void testTableWithStringName() {
     HTablePool pool = new HTablePool((HBaseConfiguration)null, Integer.MAX_VALUE);
     String tableName = "testTable";
 
     // Request a table from an empty pool
     HTableInterface table = pool.getTable(tableName);
-    assertNotNull(table);
+    Assert.assertNotNull(table);
 
     // Return the table to the pool
     pool.putTable(table);
 
     // Request a table of the same name
     HTableInterface sameTable = pool.getTable(tableName);
-    assertSame(table, sameTable);
+    Assert.assertSame(table, sameTable);
   }
 
+  @Test
   public void testTableWithByteArrayName() {
     HTablePool pool = new HTablePool((HBaseConfiguration)null, Integer.MAX_VALUE);
     byte[] tableName = Bytes.toBytes("testTable");
 
     // Request a table from an empty pool
     HTableInterface table = pool.getTable(tableName);
-    assertNotNull(table);
+    Assert.assertNotNull(table);
 
     // Return the table to the pool
     pool.putTable(table);
 
     // Request a table of the same name
     HTableInterface sameTable = pool.getTable(tableName);
-    assertSame(table, sameTable);
+    Assert.assertSame(table, sameTable);
   }
 
+  @Test
   public void testTableWithMaxSize() {
     HTablePool pool = new HTablePool((HBaseConfiguration)null, 2);
     String tableName = "testTable";
@@ -79,11 +105,12 @@ public class TestHTablePool extends HBaseTestCase {
     HTableInterface sameTable1 = pool.getTable(tableName);
     HTableInterface sameTable2 = pool.getTable(tableName);
     HTableInterface sameTable3 = pool.getTable(tableName);
-    assertSame(table1, sameTable1);
-    assertSame(table2, sameTable2);
-    assertNotSame(table3, sameTable3);
+    Assert.assertSame(table1, sameTable1);
+    Assert.assertSame(table2, sameTable2);
+    Assert.assertNotSame(table3, sameTable3);
   }
 
+  @Test
   public void testTablesWithDifferentNames() {
     HTablePool pool = new HTablePool((HBaseConfiguration)null, Integer.MAX_VALUE);
     String tableName1 = "testTable1";
@@ -92,7 +119,7 @@ public class TestHTablePool extends HBaseTestCase {
     // Request a table from an empty pool
     HTableInterface table1 = pool.getTable(tableName1);
     HTableInterface table2 = pool.getTable(tableName2);
-    assertNotNull(table2);
+    Assert.assertNotNull(table2);
 
     // Return the tables to the pool
     pool.putTable(table1);
@@ -101,7 +128,45 @@ public class TestHTablePool extends HBaseTestCase {
     // Request tables of the same names
     HTableInterface sameTable1 = pool.getTable(tableName1);
     HTableInterface sameTable2 = pool.getTable(tableName2);
-    assertSame(table1, sameTable1);
-    assertSame(table2, sameTable2);
+    Assert.assertSame(table1, sameTable1);
+    Assert.assertSame(table2, sameTable2);
+  }
+  
+  
+  @Test
+  public void testCloseTablePool() throws IOException { 
+    
+    HTablePool pool = new HTablePool(TEST_UTIL.getConfiguration(), 4);
+    String tableName = "testTable";
+    HBaseAdmin admin = new HBaseAdmin(TEST_UTIL.getConfiguration());
+
+    if (admin.tableExists(tableName)) {
+      admin.deleteTable(tableName);
+    }
+
+    HTableDescriptor tableDescriptor = new HTableDescriptor(Bytes
+        .toBytes(tableName));
+    tableDescriptor.addFamily(new HColumnDescriptor("randomFamily"));
+    admin.createTable(tableDescriptor);
+
+    
+    // Request tables from an empty pool
+    HTableInterface[] tables = new HTableInterface[4];
+    for (int i = 0; i < 4; ++i ) {
+      tables[i] = pool.getTable(tableName);
+    }
+    
+    pool.closeTablePool(tableName);
+    
+    for (int i = 0; i < 4; ++i ) {
+      pool.putTable(tables[i]);
+    }
+
+    Assert.assertEquals(4, pool.getCurrentPoolSize(tableName));
+    
+    pool.closeTablePool(tableName);
+
+    Assert.assertEquals(0, pool.getCurrentPoolSize(tableName));
+    
   }
 }
